force-app/main/default/objects/Entity_Parameter__mdt/Entity_Parameter__mdt.object-meta.xml
<CustomObject>
    <description>Entity parametric that defines the Digital Onboarding behavior.</description>
    <label>Entity Parameter</label>
    <pluralLabel>Entity Parameters</pluralLabel>
</CustomObject>