force-app/main/default/objects/Entity_Parameter__mdt/fields/Company_Perimeter_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Company_Perimeter_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Perimeter enabled</label>
    <type>Checkbox</type>
</CustomField>