force-app/main/default/objects/Entity_Parameter__mdt/fields/Digital_Onboarding_enabled_for_companies__c.field-meta.xml
<CustomField>
    <fullName>Digital_Onboarding_enabled_for_companies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Digital Onboarding enabled for companies</label>
    <type>Checkbox</type>
</CustomField>