force-app/main/default/objects/Entity_Parameter__mdt/fields/Manual_Company_Selection_enabled__c.field-meta.xml
<CustomField>
    <fullName>Manual_Company_Selection_enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Company Selection enabled</label>
    <type>Checkbox</type>
</CustomField>