force-app/main/default/objects/Entity_Parameter__mdt/fields/Powered_User_required__c.field-meta.xml
<CustomField>
    <fullName>Powered_User_required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Powered User required</label>
    <type>Checkbox</type>
</CustomField>