force-app/main/default/objects/Entity_Parameter__mdt/fields/User_Company_relation_unique__c.field-meta.xml
<CustomField>
    <fullName>User_Company_relation_unique__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TRUE if 1:1
FALSE if 1:N</description>
    <label>User-Company relation unique</label>
    <type>Checkbox</type>
</CustomField>